--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
     -->
     <style>
       .dark-mode {
+        --ig-elevated-separator: 54, 54, 54;
         --fds-black: black;
         --fds-black-alpha-05: rgba(0, 0, 0, 0.05);
         --fds-black-alpha-10: rgba(0, 0, 0, 0.1);
@@ -782,6 +783,7 @@
     </style>
     <style>
       .light-mode {
+        --ig-elevated-separator: 219, 219, 219;
         --fds-black: #000000;
         --fds-black-alpha-05: rgba(0, 0, 0, 0.05);
         --fds-black-alpha-10: rgba(0, 0, 0, 0.1);
