--- a/public/index.html
+++ b/public/index.html
@@ -1510,11 +1510,11 @@
         transform: translateY(-100%);
       }
     </style>
-    <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+    <!-- <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
     <script>
       // VConsole will be exported to `window.VConsole` by default.
       var vConsole = new window.VConsole();
-    </script>
+    </script> -->
   </head>
   <body>
     <div id="root">
